actions to articles blog

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -450,3 +450,13 @@ textarea {
   padding: 0.2em 0;
 }
 
+.success {
+  padding-top: 18px;
+    padding-bottom: 18px;
+    border-left: 6px;
+    border-radius: 13px;
+    border-left: '#48945B';
+    background-color: '#63AD6F';
+    color: '#fff';
+    font-size: 14px;
+}
