--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,6 +7,24 @@
    License: none (public domain)
 */
 
+:-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+  border-radius: 3px;
+	background-color: #AAA3BD;
+}
+
 html,
 body,
 div,
