--- a/styles/asideMenu.module.scss
+++ b/styles/asideMenu.module.scss
@@ -18,6 +18,16 @@
     background: $text; 
     border-radius: 3.5px;
   }
+  
+  h3.sectionMenu {
+    padding-left: 1.25rem;
+    color: $text;
+    font-size: 0.75rem;
+    font-weight: 500;
+    padding-bottom: 0.5rem;
+    text-transform: uppercase;
+    padding-top: 0.75rem;
+  }
 }
 
 .asideMenuClosed {
@@ -27,7 +37,14 @@
   background-color: $primary;
   color: $text;
   transition: max-width 0.3s ease-in;
+
+  h3.sectionMenu {
+    height: 0;
+    pointer-events: none;
+    opacity: 0;
+  }
 }
+
 
 .logoContainer {
   width: 100%;
